<resources>
    <string name="app_name">Particip8</string>
    <string name="shared_preferences_identifier">particip8_shared_preferences</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_evaluation_creation">EvaluationCreationActivity</string>

    <string name="evaluation_creation_header">Configure New Evaluation</string>
    <string name="evaluation_name_label">Evaluation Name</string>
    <string name="evaluation_name_hint">Enter Evaluation Name</string>
    <string name="class_select_label">Class</string>
    <string name="evaluation_creation_button_label">Start Evaluation</string>
</resources>
